--- a/smart-city-parking/src/main/resources/report.jrxml
+++ b/smart-city-parking/src/main/resources/report.jrxml
@@ -13,10 +13,7 @@
     <parameter name="occupiedSpots" class="java.lang.Integer"/>
     <parameter name="availableSpots" class="java.lang.Integer"/>
     <parameter name="occupancyRate" class="java.lang.String"/>
-    <parameter name="dailyRevenue" class="java.lang.String"/>
-    <parameter name="monthlyRevenue" class="java.lang.String"/>
-    <parameter name="peakHours" class="java.lang.String"/>
-    <parameter name="parkingViolations" class="java.lang.Integer"/>
+    <parameter name="Revenue" class="java.lang.String"/>
     
     <title>
         <band height="100">
@@ -69,27 +66,7 @@
             
             <textField>
                 <reportElement x="20" y="180" width="500" height="20"/>
-                <textFieldExpression><![CDATA["Daily Revenue: " + $P{dailyRevenue}]]></textFieldExpression>
-            </textField>
-            
-            <textField>
-                <reportElement x="20" y="200" width="500" height="20"/>
-                <textFieldExpression><![CDATA["Monthly Revenue: " + $P{monthlyRevenue}]]></textFieldExpression>
-            </textField>
-            
-            <staticText>
-                <reportElement x="0" y="240" width="200" height="20"/>
-                <text><![CDATA[Additional Information:]]></text>
-            </staticText>
-            
-            <textField>
-                <reportElement x="20" y="270" width="500" height="20"/>
-                <textFieldExpression><![CDATA["Peak Hours: " + $P{peakHours}]]></textFieldExpression>
-            </textField>
-            
-            <textField>
-                <reportElement x="20" y="290" width="500" height="20"/>
-                <textFieldExpression><![CDATA["Parking Violations: " + $P{parkingViolations}]]></textFieldExpression>
+                <textFieldExpression><![CDATA["Revenue: " + $P{Revenue}]]></textFieldExpression>
             </textField>
         </band>
     </detail>
