--- a/smart-city-parking/src/main/resources/report.jrxml
+++ b/smart-city-parking/src/main/resources/report.jrxml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
               xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
               xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports
@@ -14,6 +13,7 @@
     <parameter name="availableSpots" class="java.lang.Integer"/>
     <parameter name="occupancyRate" class="java.lang.String"/>
     <parameter name="Revenue" class="java.lang.String"/>
+    <parameter name="topUsers" class="java.lang.String"/>
     
     <title>
         <band height="100">
@@ -68,6 +68,15 @@
                 <reportElement x="20" y="180" width="500" height="20"/>
                 <textFieldExpression><![CDATA["Revenue: " + $P{Revenue}]]></textFieldExpression>
             </textField>
+            <staticText>
+                <reportElement x="0" y="200" width="200" height="20"/>
+                <text><![CDATA[Top User:]]></text>
+            </staticText>
+          <textField>
+                <reportElement x="20" y="210" width="500" height="20"/>
+                <textFieldExpression><![CDATA["Top: " + $P{topUsers}]]></textFieldExpression>
+            </textField>
+
         </band>
     </detail>
 </jasperReport>
